Create api find all parameter
